Fix regression - small cta for large upsell banner and big card (#62009)
* Fix regression - small cta for large upsell banner and big card

* Extract upsell styles to per component css modules

* Regression - bring back margins to cta in large upsellbigcard

* Add upsell components to loki visual tests

* Fix too big margin in upsell large variant

* Align storybook story with the real usage

* Update Loki Snapshots

* Allow custom button styling on UpsellCard, move custom styles card instance

---------

--- a/frontend/src/metabase/admin/upsells/components/UpsellPill.module.css
+++ b/frontend/src/metabase/admin/upsells/components/UpsellPill.module.css
@@ -1,31 +1,23 @@
 @import "./Upsells.base.module.css";
 
-.UpsellCTALink {
-  display: flex;
+.UpsellPillComponent {
+  display: inline-flex;
   gap: 0.5rem;
   align-items: center;
   justify-content: center;
   flex-grow: 0;
   font-weight: bold;
   font-size: 0.75rem;
-  padding: 0.25rem 0.5rem;
-  border-radius: 2rem;
-  color: var(--mb-color-upsell-primary);
-  background-color: var(--mb-color-upsell-secondary);
   text-decoration: none;
+  padding: 0.25rem 0.75rem;
+  border-radius: 2rem;
+  border: 1px solid var(--mb-color-upsell-secondary);
+  color: var(--mb-color-upsell-primary);
   cursor: pointer;
 
   &:hover {
     background-color: var(--mb-color-upsell-primary);
     color: var(--mb-color-text-white);
-  }
-
-  &.Medium {
-    padding: 0.5rem 1rem;
-  }
-
-  &.Large {
-    font-size: 0.875rem;
-    padding: 0.75rem 1rem;
+    border: 1px solid var(--mb-color-upsell-primary);
   }
 }
